java api example, get sites